--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">7MinuteWorkoutApp</string>
+    <string name="image">landing page image</string>
 </resources>
